add detail product endpoint
